# Online-Contact-Planning-for-Fall-Mitigation

./: CMakeLists.txt  Envi1.xml  Envi2.xml  Envi3.xml  README.md  hrp2.rob
result/flat/1/: EdgeATraj.txt  EdgeBTraj.txt  EdgeCOMTraj.txt  EdgexTraj.txt  EdgeyTraj.txt  EdgezTraj.txt  OptConfig1.config  OptConfig2.config  OptConfig3.config  OptConfig4.config  OptConfig5.config  sim.path
result/flat/1Contact/: ImpulseForce.txt  InitConfig.config  InitConfigCHEdges.txt  InitConfigIntersections.txt  InitConfigPIPs.txt  ResAnalysis.py  SampleTest.config  Settings.txt
result/flat/1Contact/1/: 0_0_OptConfig0.config  0_0_OptConfig1.config  0_0_OptConfig2.config  0_0_OptConfig3.config  0_0_OptConfig4.config  0_0_OptConfig5.config  1_0_OptConfig0.config  1_0_OptConfig1.config  1_0_OptConfig2.config  1_0_OptConfig3.config  1_0_OptConfig4.config  1_0_OptConfig5.config  2_0_OptConfig0.config  2_0_OptConfig1.config  2_0_OptConfig2.config  2_0_OptConfig3.config  2_0_OptConfig4.config  2_0_OptConfig5.config  3_0_OptConfig0.config  3_0_OptConfig1.config  3_0_OptConfig2.config  3_0_OptConfig3.config  3_0_OptConfig4.config  3_0_OptConfig5.config  4_0_OptConfig0.config  4_0_OptConfig1.config  4_0_OptConfig2.config  4_0_OptConfig3.config  4_0_OptConfig4.config  4_0_OptConfig5.config  5_0_OptConfig0.config  5_0_OptConfig1.config  5_0_OptConfig2.config  5_0_OptConfig3.config  5_0_OptConfig4.config  5_0_OptConfig5.config  6_0_OptConfig0.config  6_0_OptConfig1.config  6_0_OptConfig2.config  6_0_OptConfig3.config  (+24 more)
result/flat/1Contact/10/: 0_0_OptConfig0.config  0_0_OptConfig1.config  0_0_OptConfig2.config  0_0_OptConfig3.config  0_0_OptConfig4.config  0_0_OptConfig5.config  1_0_OptConfig0.config  1_0_OptConfig1.config  1_0_OptConfig2.config  1_0_OptConfig3.config  1_0_OptConfig4.config  1_0_OptConfig5.config  CtrlStateTraj.path  EdgeATraj.txt  EdgeBTraj.txt  EdgeCOMTraj.txt  EdgexTraj.txt  EdgeyTraj.txt  EdgezTraj.txt  FailureStateTraj.path  InitConfig.config  PlanStateTraj.path  PlanTime.txt  PushInfoFile.txt
result/flat/1Contact/100/: 0_0_OptConfig0.config  0_0_OptConfig1.config  0_0_OptConfig2.config  0_0_OptConfig3.config  0_0_OptConfig4.config  0_0_OptConfig5.config  CtrlStateTraj.path  EdgeATraj.txt  EdgeBTraj.txt  EdgeCOMTraj.txt  EdgexTraj.txt  EdgeyTraj.txt  EdgezTraj.txt  FailureStateTraj.path  InitConfig.config  PlanStateTraj.path  PlanTime.txt  PushInfoFile.txt
result/flat/1Contact/11/: 0_0_OptConfig0.config  0_0_OptConfig1.config  0_0_OptConfig2.config  0_0_OptConfig3.config  0_0_OptConfig4.config  0_0_OptConfig5.config  CtrlStateTraj.path  EdgeATraj.txt  EdgeBTraj.txt  EdgeCOMTraj.txt  EdgexTraj.txt  EdgeyTraj.txt  EdgezTraj.txt  FailureStateTraj.path  PlanStateTraj.path  PlanTime.txt  PushInfoFile.txt
result/flat/1Contact/12/: 0_0_OptConfig0.config  0_0_OptConfig1.config  0_0_OptConfig2.config  0_0_OptConfig3.config  0_0_OptConfig4.config  0_0_OptConfig5.config  CtrlStateTraj.path  EdgeATraj.txt  EdgeBTraj.txt  EdgeCOMTraj.txt  EdgexTraj.txt  EdgeyTraj.txt  (+5 more)
result/flat/2Contact/: ImpulseForce.txt  Settings.txt
result/flat/3Contact/: Settings.txt  ToInsert.py
result/uneven/1Contact/: Settings.txt
src/: CollisionImpulse.cpp  CommonHeader.h  ContactController.cpp  ContactFinalConfigOpt.cpp  ContactInfoLoader.cpp  ContactPlanning.cpp  ContactPlanningInner.cpp  ConvexPolyhedron.cpp  EndEffectorOrientation.cpp  EnviGeometry.cpp  EuclideanInterpolation.cpp  ExpVisualizer.py  InitialConfigurationOptimization.cpp  InitialStateOptimization.cpp  LastContactControl.cpp  Main.cpp  NonlinearOptimizerInfo.h  PyVisualizer.py  ReachabilityMap.cpp  RobotInfo.h  RobotStateFiler.cpp  RobotUtils.cpp  SelfLinkGeometry.cpp  SignedDistanceField.cpp  SimulationRelated.cpp  SimulationTest.cpp  TaskSpaceControll.cpp  TouchDownConfig.cpp  TouchDownPlanning.cpp  TransientOptimization.cpp  TransientTrajectory.cpp  WholeBodyEstimation.cpp
src/CppSpline/: CatmullRom.cpp  CatmullRom.h  Curve.cpp  Curve.h  SplineVector.cpp  SplineVector.h  main.cc
user/hrp2/: DefaultTest.config  EndEffectorOri.config  EuclideanInter.config  InitConfig.config  InitConfigCHEdges.txt  InitConfigIntersections.txt  InitConfigPIPs.txt  InnerOptConfig.config  LastContactOptConfig.config  OptConfig1.config  OptConfig2.config  OptConfig3.config  OptConfig4.config  OptConfig5.config  SampleTest.config  TorsoLink.txt  TouchDownConfig.config  TryConfig.config
(+16203 files in other folders)
